--- a/web-server/bike-store/package.json
+++ b/web-server/bike-store/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
+    "angular-ng-autocomplete": "^2.0.1",
     "angularx-flatpickr": "^6.5.1",
     "bootstrap": "^4.4.0",
     "date-fns": "^2.16.1",
